pixel perfect mobile

--- a/source/less/advantages.less
+++ b/source/less/advantages.less
@@ -1,5 +1,5 @@
 .advantages__wrapper {
-  padding: 0 21px;
+  padding: 0 20px;
   background-color: @white;
 }
 
@@ -11,6 +11,7 @@
   line-height: 40px;
   text-align: left;
   color: @black;
+  padding-top: 5px;
 }
 
 .advantages__list {
