--- a/source/less/catalog-program.less
+++ b/source/less/catalog-program.less
@@ -13,7 +13,7 @@
 }
 
 .catalog-program__icon {
-  margin-right: 19px;
+  margin-right: 20px;
   background-color: @basic-green;
   width: 50px;
   height: 50px;
@@ -38,8 +38,8 @@
 .catalog-program__icon--cat-pro::after {
   content: url("../img/cat-pro.svg");
   position: absolute;
-  top: 11px;
-  right: -5px;
+  top: 14px;
+  right: -10px;
 }
 
 .catalog-program__title {
@@ -101,7 +101,8 @@
   }
 
   .catalog-program__arrow {
-    margin-left: 15px;
+    margin-left: 9px;
+    margin-bottom: 3px;
     background-image: url("../img/arrow.svg");
     background-repeat: no-repeat;
     background-position: center;
