--- a/source/less/main-nav.less
+++ b/source/less/main-nav.less
@@ -1,6 +1,5 @@
 .main-nav {
   width: auto;
-  min-height: 66px;
   background-color: @basic-green;
 }
 
@@ -52,15 +51,14 @@
 }
 
 .main-nav__toggle {
-  position: absolute;
-  top: 25px;
-  right: 20px;
-  z-index: 2;
   display: block;
-  height: 16px;
-  background-color: @white;
   cursor: pointer;
   border: none;
+  background-color: @white;
+}
+
+.main-header__logo-cat-energy {
+  margin: 0 auto;
 }
 
 .main-nav--closed .main-nav__toggle::before {
