--- a/source/less/module.less
+++ b/source/less/module.less
@@ -5,6 +5,7 @@
   line-height: 24px;
   text-align: center;
   color: @black;
+  text-transform: uppercase;
 }
 
 .module__text {
@@ -46,7 +47,7 @@
   flex-direction: column;
   border: 1px solid @special-grey;
   box-sizing: border-box;
-  padding-top: 14px;
+  padding-top: 10px;
   border-radius: 3px;
   min-width: 124px;
 }
