--- a/source/less/utils/global.less
+++ b/source/less/utils/global.less
@@ -8,14 +8,15 @@ img {
   font-family: "Oswald", "Arial", sans-serif;
   font-size: 16px;
   line-height: 16px;
+  margin: 0;
 }
 
 .page__body {
   box-sizing: border-box;
   min-height: 100%;
-  margin: 0 auto;
   background-color: @white;
   color: @black;
+  margin: 0 auto;
 }
 
 .visually-hidden {
