--- a/source/less/range-bar-mobile.less
+++ b/source/less/range-bar-mobile.less
@@ -2,7 +2,12 @@
   display: flex;
   min-width: 210px;
   justify-content: space-evenly;
-  margin-top: 15px;
+  margin-top: 28px;
+  font-family: inherit;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 20px;
+  text-transform: uppercase;
 }
 
 .range-bar-mobile__scale {
