--- a/source/less/footer-social.less
+++ b/source/less/footer-social.less
@@ -39,8 +39,12 @@
   fill: @footer-icon;
 }
 
-.footer-social__item:not(:last-child) {
+.footer-social__item:nth-child(1) {
   margin-right: 26px;
+}
+
+.footer-social__item:nth-child(2) {
+  margin-right: 31px;
 }
 
 @media (min-width: @tablet-width) {
