--- a/source/less/questionnaire.less
+++ b/source/less/questionnaire.less
@@ -1,18 +1,18 @@
 .questionnaire__cat-data {
   position: relative;
-  padding-bottom: 10px;
+  padding-bottom: 8px;
   padding-left: 20px;
   padding-right: 20px;
   border-bottom: 1px solid @color-border;
 }
 
 .questionnaire__purpose-program {
-  padding: 20px 20px;
+  padding: 26px 20px 23px 20px;
   border-bottom: 1px solid @color-border;
 }
 
 .questionnaire__contact {
-  padding: 26px 20px 8px 20px;
+  padding: 26px 20px 0 20px;
 }
 
 .questionnaire__comment {
