--- a/source/less/additional-products.less
+++ b/source/less/additional-products.less
@@ -1,5 +1,5 @@
 .additional-products__wrapper {
-  padding: 25px 20px 35px 20px;
+  padding: 26px 20px 35px 20px;
   background-color: @white;
 }
 
@@ -17,11 +17,12 @@
 .additional-products__title::after {
   content: "";
   position: absolute;
-  width: 100%;
+  width: 58px;
   height: 2px;
   top: 50%;
   background-color: #68b738;
   margin-left: 22px;
+  overflow: hidden;
 }
 
 .additional-products__cards {
@@ -33,7 +34,7 @@
 .additional-products__item {
   display: flex;
   flex-direction: column;
-  padding-bottom: 20px;
+  padding-bottom: 19px;
   border-bottom: 1px solid @special-grey;
 }
 
@@ -123,7 +124,7 @@
 }
 
 .additional-products__icon {
-  margin: 60px auto;
+  margin: 55px auto;
   width: 100%;
   height: 80px;
   fill: @white;
