--- a/source/less/cat-data.less
+++ b/source/less/cat-data.less
@@ -1,6 +1,6 @@
 .cat-data__item {
   margin: 0;
-  margin-bottom: 14px;
+  margin-bottom: 13px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -13,7 +13,8 @@
   line-height: 18px;
   text-transform: uppercase;
   color: @text-grey;
-  margin-right: 12px;
+  margin-right: 13px;
+  white-space: nowrap;
 }
 
 .cat-data__name-form {
