--- a/source/less/footer.less
+++ b/source/less/footer.less
@@ -27,9 +27,10 @@
 
 .footer__copyright {
   display: flex;
-  padding: 28px 20px;
+  padding: 23px 20px;
   justify-content: space-between;
   text-decoration: none;
+  align-items: center;
 }
 
 @media (min-width: @tablet-width) {
