--- a/source/less/main-nav.less
+++ b/source/less/main-nav.less
@@ -21,7 +21,7 @@
 .main-nav__link {
   padding-top: 22px;
   padding-bottom: 24px;
-  padding-left: 20px;
+  padding-left: 0;
   position: relative;
   display: block;
   font-family: inherit;
@@ -55,6 +55,7 @@
   cursor: pointer;
   border: none;
   background-color: @white;
+  padding: 0;
 }
 
 .main-header__logo-cat-energy {
@@ -64,8 +65,8 @@
 .main-nav--closed .main-nav__toggle::before {
   content: "";
   position: absolute;
-  top: 15px;
-  left: 17px;
+  top: 20px;
+  left: 25px;
   height: 66px;
   background-color: @white;
 }
@@ -84,8 +85,8 @@
 .main-nav--opened .main-nav__toggle::after {
   content: "";
   position: absolute;
-  top: 24px;
-  right: 24px;
+  top: 32px;
+  right: 20px;
   width: 25px;
   height: 1.5px;
   background-color: @black;
