--- a/source/less/module.less
+++ b/source/less/module.less
@@ -78,7 +78,7 @@
     display: flex;
     flex-direction: column;
     margin-top: 0;
-    align-items: end;
+    align-items: flex-end;
     align-self: center;
     margin-left: auto;
     padding: 0;
