PP mobile form.html

--- a/source/less/additionally.less
+++ b/source/less/additionally.less
@@ -16,11 +16,10 @@
 }
 
 .additionally__list {
-  padding: 34px 0;
+  padding: 39px 0;
 }
 
 .additionally__item {
-  margin-bottom: 25px;
   font-family: inherit;
   font-weight: 400;
   font-size: 16px;
@@ -32,6 +31,10 @@
   &:active {
     opacity: 0.3;
   }
+}
+
+.additionally__item:not(:last-child) {
+  margin-bottom: 25px;
 }
 
 .additionally__label {
