--- a/source/less/advantages.less
+++ b/source/less/advantages.less
@@ -77,14 +77,15 @@
   .advantages__title {
     font-size: 60px;
     line-height: 60px;
+    padding-top: 8px;
   }
 
   .advantages__list {
     padding: 0;
     display: grid;
     grid-template-columns: 1fr 1fr;
-    column-gap: 150px;
-    row-gap: 40px;
+    column-gap: 128px;
+    row-gap: 58px;
     margin-top: 72px;
     margin-bottom: 47px;
     margin-right: 70px;
@@ -131,7 +132,7 @@
 
 @media (min-width: @desktop-width) {
   .advantages__wrapper {
-    padding: 0 110px 70px 110px;
+    padding: 0 110px;
   }
 
   .advantages__list {
