--- a/source/less/cat-comparison.less
+++ b/source/less/cat-comparison.less
@@ -65,25 +65,25 @@
 
   .cat-comparison__after {
     display: block;
-    margin-bottom: 42px;
+    margin-bottom: 30px;
   }
 
   .cat-comparison {
-    background: linear-gradient(@white 22.4%, @grey-light 17%);
+    background: linear-gradient(@white 26.5%, @grey-light 26.5%);
   }
 
   .cat-comparison__image-before {
     display: block;
     height: 511px;
     width: 592px;
-    background: linear-gradient(@white 28%, @grey-light 17%);
+    background: linear-gradient(@white 33%, @grey-light 19%);
   }
 
   .cat-comparison__image-after {
     display: block;
     height: 511px;
     width: 592px;
-    background: linear-gradient(@white 28%, @grey-light 21%);
+    background: linear-gradient(@white 33%, @grey-light 19%);
   }
 }
 
@@ -93,6 +93,10 @@
     background: linear-gradient(@white 32%, @basic-grey 24%);
   }
 
+  .cat-comparison__wrapper {
+    margin-right: 110px;
+  }
+
   .cat-comparison__image-after {
     background: linear-gradient(@white 36%, @basic-grey 34%);
   }
@@ -100,6 +104,4 @@
   .cat-comparison__image-before {
     background: linear-gradient(@white 36%, @basic-grey 34%);
   }
-
-
 }
