--- a/source/less/collaboration.less
+++ b/source/less/collaboration.less
@@ -42,12 +42,28 @@
   }
 
   .collaboration__invitation {
-    padding: 55px 60px;
+    padding: 54px 70px;
     background-color: @basic-grey;
   }
 
   .collaboration__invitation.collaboration__invitation--index {
     background-color: @white;
+  }
+
+  .collaboration__title {
+    font-size: 20px;
+    line-height: 26px;
+    text-transform: uppercase;
+  }
+
+  .collaboration__address {
+    font-size: 16px;
+    line-height: 20px;
+    text-align: right;
+  }
+
+  .collaboration__google-map {
+    height: 400px;
   }
 }
 
