--- a/source/less/comment.less
+++ b/source/less/comment.less
@@ -18,7 +18,7 @@
   color: @text-grey;
   border: 1px solid @grey-border;
   box-sizing: border-box;
-  padding: 10px 12px;
+  padding: 10px 12px 45px;
   width: 100%;
   height: auto;
   margin-top: 40px;
@@ -34,9 +34,9 @@
   .comment__skill-cat-form {
     font-size: 20px;
     line-height: 30px;
-    padding: 10px 19px;
-    margin-bottom: 65px;
-    margin-top: 75px;
+    padding: 8px 22px;
+    margin-bottom: 73px;
+    margin-top: 79px;
   }
 
   .comment__wrapper {
