--- a/source/less/program-selection.less
+++ b/source/less/program-selection.less
@@ -39,7 +39,7 @@
 
 @media (min-width: @tablet-width) {
   .program-selection__wrapper {
-    padding: 75px 70px;
+    padding: 67px 70px 80px 70px;
     overflow: hidden;
     border-top: none;
   }
@@ -47,17 +47,19 @@
   .program-selection__title {
     font-size: 60px;
     line-height: 60px;
+    padding: 0;
   }
 
   .program-selection__subtitle {
     font-size: 20px;
     line-height: 30px;
     margin-top: 54px;
+    padding: 0;
   }
 
   .program-selection__questionnaire {
     margin: 0;
-    margin-top: 39px;
+    margin-top: 66px;
   }
 }
 
