--- a/source/less/promo.less
+++ b/source/less/promo.less
@@ -93,7 +93,7 @@
   .promo__wrapper {
     display: flex;
     flex-direction: column;
-    padding: 60px 30px 0 30px;
+    padding: 64px 30px 0 30px;
   }
 
   .promo__title {
@@ -103,7 +103,7 @@
     line-height: 60px;
     margin-bottom: 40px;
     color: @black;
-    margin-left: 90px;
+    margin-left: 86px;
   }
 
   .promo__subtitle {
@@ -129,8 +129,9 @@
     max-width: 244px;
     font-size: 20px;
     line-height: 20px;
+    height: 54px;
     margin-left: 90px;
-    margin-top: 30px;
+    margin-top: 29px;
     padding: 14px 26px;
   }
 }
@@ -140,7 +141,7 @@
     position: relative;
     padding: 0;
     padding-left: 190px;
-    padding-top: 114px;
+    padding-top: 111px;
     padding-bottom: 82px;
   }
 
@@ -168,8 +169,8 @@
   .promo__image {
     display: block;
     position: absolute;
-    top: 0;
-    left: 558px;
+    top: 30px;
+    left: 559px
   }
 
   .promo__title {
@@ -192,7 +193,7 @@
   }
 
   .promo__button-choose-program {
-    margin-top: 52px;
+    margin-top: 35px;
     margin-left: 0;
   }
 }
