--- a/source/less/purpose-program.less
+++ b/source/less/purpose-program.less
@@ -64,7 +64,7 @@
 
 @media (min-width: @tablet-width) {
   .purpose-program__form {
-    padding: 25px 28px;
+    padding: 28px 27px 6px 27px;
     border: 1px solid @grey-border;
   }
 
@@ -74,6 +74,10 @@
   }
 
   .purpose-program__item {
+    margin-bottom: 23px;
+  }
+
+  .purpose-program__item:not(:last-child) {
     margin-bottom: 23px;
   }
 
@@ -90,7 +94,7 @@
   }
 
   .purpose-program__name {
-    padding-left: 60px;
+    padding-left: 43px;
   }
 }
 
