--- a/source/less/questionnaire.less
+++ b/source/less/questionnaire.less
@@ -71,15 +71,17 @@
 
 @media (min-width: @tablet-width) {
   .questionnaire__contact {
-    padding: 56px 0 65px 0;
+    padding: 79px 0 65px 0;
   }
 
   .questionnaire__cat-data {
     border-bottom: none;
+    padding: 0;
   }
 
   .questionnaire__purpose-program {
     border-bottom: none;
+    padding: 57px 0 0 0;
   }
 
   .questionnaire__comment {
