--- a/source/less/range-bar.less
+++ b/source/less/range-bar.less
@@ -32,6 +32,13 @@
   background-position: center;
 }
 
+@media (min-width: @tablet-width) {
+  .range-bar {
+    font-size: 20px;
+    line-height: 30px;
+  }
+}
+
 @media (min-width: @desktop-width) {
   .range-bar {
     padding-bottom: 0;
