--- a/source/less/additional-products.less
+++ b/source/less/additional-products.less
@@ -17,10 +17,10 @@
 .additional-products__title::after {
   content: "";
   position: absolute;
-  width: 58px;
+  width: 100%;
   height: 2px;
   top: 50%;
-  background-color: #68b738;
+  background-color: @basic-green;
   margin-left: 22px;
   overflow: hidden;
 }
@@ -137,9 +137,11 @@
   }
 
   .additional-products__title {
-    font-size: 60px;
-    line-height: 60px;
+    font-size: 36px;
+    line-height: 36px;
     text-align: left;
+    padding-left: 37px;
+    padding-right: 36px;
   }
 
   .additional-products__title::before {
@@ -148,23 +150,23 @@
     width: 100%;
     height: 2px;
     top: 50%;
-    background-color: #68b738;
-    margin-right: 40px;
+    background-color: @basic-green;
     right: 100%;
   }
 
   .additional-products__title::after {
     margin-left: 40px;
+    width: 100%;
   }
 
   .additional-products__cards {
-    margin: 70px 0;
+    margin: 80px 0 65px;
   }
 
   .additional-products__item {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    padding: 26px 38px 28px 38px;
+    padding: 26px 38px 32px 38px;
     border-left: 1px solid @special-grey;
     border-right: 1px solid @special-grey;
   }
@@ -224,12 +226,13 @@
     margin-left: 77px;
     margin-right: 0;
     width: 80px;
-    height: auto;
+    height: 90px;
   }
 
   .additional-products__bonus-title {
     padding: 0;
     margin-right: 124px;
+    text-align: inherit;
   }
 }
 
