--- a/source/less/additionally.less
+++ b/source/less/additionally.less
@@ -76,7 +76,7 @@
   .additionally__buy-more {
     font-size: 36px;
     line-height: 36px;
-    padding-right: 40px;
+    padding-right: 44px;
   }
 
   .additionally__wrapper {
@@ -91,7 +91,7 @@
     top: 50%;
     background-color: @basic-green;
     right: 100%;
-    margin-right: 40px;
+    margin-right: 37px;
   }
 
   .additionally__list {
@@ -99,12 +99,21 @@
     align-items: center;
     justify-content: space-between;
     flex-wrap: wrap;
-    padding: 65px 0;
+    padding: 58px 0 32px;
   }
 
   .additionally__item {
     width: 50%;
-    margin-bottom: 42px;
+    font-size: 20px;
+    line-height: 30px;
+  }
+
+  .additionally__item:not(:last-child) {
+    margin-bottom: 37px;
+  }
+
+  .additionally__item:last-child {
+    margin-bottom: 37px;
   }
 
   .additionally__mark {
@@ -113,7 +122,7 @@
   }
 
   .additionally__description {
-    padding-left: 19px;
+    padding-left: 22px;
   }
 
   .additionally__label {
