--- a/source/less/all-catalog.less
+++ b/source/less/all-catalog.less
@@ -75,20 +75,24 @@
   .all-catalog {
     display: flex;
     flex-direction: column;
-    padding: 40px 40px;
+    padding: 28px 40px 36px;
     border: 2px solid @basic-grey;
   }
 
   .all-catalog__title {
-    margin-top: 150px;
+    margin-top: 133px;
     font-size: 20px;
     line-height: 22px;
+    padding-right: 35px;
+    padding-left: 35px;
   }
 
   .all-catalog__subtitle {
     margin-top: 23px;
     font-size: 16px;
     line-height: 18px;
+    padding-right: 35px;
+    padding-left: 35px;
   }
 
   .all-catalog__button {
@@ -97,7 +101,7 @@
 
   .all-catalog::before {
     height: 60px;
-    top: 52px;
+    top: 50px;
   }
 
   .all-catalog::after {
