--- a/source/less/contact.less
+++ b/source/less/contact.less
@@ -77,7 +77,7 @@
   .contact__title {
     font-size: 36px;
     line-height: 36px;
-    padding-right: 40px;
+    padding-right: 49px;
   }
 
   .contact__wrapper {
@@ -96,14 +96,18 @@
   }
 
   .contact__list {
-    padding-top: 75px;
-    padding-bottom: 65px;
+    padding-top: 70px;
+    padding-bottom: 0;
   }
 
   .contact__item {
-    margin-bottom: 20px;
+    margin-bottom: 0;
     display: flex;
     justify-content: space-between;
+  }
+
+  .contact__item:not(:last-child) {
+    margin-bottom: 20px;
   }
 
   .contact__label {
@@ -117,6 +121,7 @@
     font-size: 20px;
     line-height: 30px;
     width: 100%;
+    padding: 10px 20px;
   }
 
   .none {
