--- a/source/less/main-header.less
+++ b/source/less/main-header.less
@@ -34,6 +34,8 @@
 @media (min-width: @tablet-width) {
   .main-header__wrapper {
     padding: 24px 30px 0 30px;
+    align-items: flex-end;
+    height: auto;
   }
 
   .main-header__logo-cat-energy {
