--- a/source/less/main-nav.less
+++ b/source/less/main-nav.less
@@ -1,6 +1,5 @@
 .main-nav {
   width: auto;
-  background-color: @basic-green;
 }
 
 .main-nav__list {
@@ -100,22 +99,22 @@
   transform: rotate(-45deg);
 }
 
+.main-nav--closed .main-nav__wrapper {
+  display: none;
+}
 
-@media (max-width: @tablet-width) {
-  .main-nav--closed .main-nav__wrapper {
-    display: none;
-  }
-
-  .main-nav--opened .main-nav__wrapper {
-    display: block;
-  }
+.main-nav--opened .main-nav__wrapper {
+  display: block;
 }
 
 @media (min-width: @tablet-width) {
+  .main-nav--closed .main-nav__wrapper {
+    display: block;
+  }
+
   .main-nav {
-    min-width: 440px;
-    min-height: auto;
-    background-color: @black;
+    min-width: 442px;
+    height: 36px;
   }
 
   .main-nav__list {
@@ -132,6 +131,7 @@
   .main-nav__link {
     font-size: 18px;
     line-height: 24px;
+    font-weight: 400;
     min-height: auto;
     text-align: center;
     padding: 0;
