--- a/source/less/product-card.less
+++ b/source/less/product-card.less
@@ -68,16 +68,22 @@
     flex-direction: column;
     align-items: center;
     background-color: @basic-grey;
-    padding: 40px 40px;
+    padding-top: 39px;
+    padding-bottom: 39px;
+    padding-left: 39px;
+    padding-right: 37px;
     box-sizing: border-box;
   }
 
   .product-card__title {
-    margin-bottom: 21px;
+    margin-bottom: 13px;
     padding: 0;
     font-size: 20px;
     line-height: 24px;
     text-align: center;
+    padding-left: 59px;
+    padding-right: 59px;
+    margin-top: 34px;
   }
 
   .product-card__info {
@@ -91,17 +97,23 @@
 
   .product-card__button-order {
     margin-bottom: 0;
-    margin-top: 33px;
+    margin-top: 30px;
   }
 
   .product-card__icon {
     align-self: center;
     margin-top: -80px;
-    margin-bottom: 45px;
+    margin-bottom: 10px;
+    margin-right: 40px;
   }
 
   .product-card__wrapper-icon {
     height: 160px;
+  }
+
+  .product-card__photo {
+    min-width: 163px;
+    height: auto;
   }
 }
 
