--- a/source/less/module.less
+++ b/source/less/module.less
@@ -23,13 +23,13 @@
   background-color: @grey-light;
 }
 
-.module__text--result {
+.module__number--result {
   font-size: 14px;
   line-height: 20px;
   text-transform: uppercase;
 }
 
-.module__text--result:first-child {
+.module__number--result:first-child {
   margin-right: 2px;
 }
 
@@ -62,7 +62,7 @@
     line-height: 37px;
   }
 
-  .module__text--result:first-child {
+  .module__number--result:first-child {
     margin-bottom: 10px;
   }
 
@@ -84,7 +84,7 @@
     padding: 0;
   }
 
-  .module__text--result {
+  .module__number--result {
     font-size: 20px;
     line-height: 20px;
   }
@@ -110,7 +110,7 @@
 }
 
 @media (min-width: @desktop-width) {
-  .module__text--result:first-child {
+  .module__number--result:first-child {
     margin-bottom: 0;
     margin-right: 63px;
   }
