--- a/source/less/range-bar.less
+++ b/source/less/range-bar.less
@@ -11,7 +11,7 @@
 }
 
 .range-bar__input {
-  -webkit-appearance: none;
+  appearance: none;
   width: 426px;
   height: 6px;
   background-color: @range-bar;
@@ -21,7 +21,7 @@
 }
 
 .range-bar__input::-webkit-slider-thumb {
-  -webkit-appearance: none;
+  appearance: none;
   background-color: @white;
   height: 34px;
   width: 34px;
