--- a/source/less/questionnaire.less
+++ b/source/less/questionnaire.less
@@ -156,11 +156,12 @@
   }
 
   .questionnaire__required-form {
-    margin-left: 80px;
+    margin: 0;
   }
 
   .questionnaire__purpose-program {
     padding: 0;
+    margin-left: 80px;
   }
 }
 
